--- a/src/main/resources/io/github/flaggton/vogelpetdoctor/views/main-view.fxml
+++ b/src/main/resources/io/github/flaggton/vogelpetdoctor/views/main-view.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="io.github.flaggton.vogelpetdoctor.views.MainViewController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.BorderPane?>
 
-    <Label fx:id="welcomeTextLabel"/>
-    <Button text="Click me!" onAction="#onClickmeButtonClick"/>
-</VBox>
+
+<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <left>
+      <ToolBar orientation="VERTICAL" BorderPane.alignment="TOP_LEFT">
+        <items>
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Dashboard" />
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Owners" />
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Pets" />
+          <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Treatments" />
+        </items>
+      </ToolBar>
+   </left>
+</BorderPane>
