--- a/src/main/resources/io/github/flaggton/vogelpetdoctor/views/owners-subview.fxml
+++ b/src/main/resources/io/github/flaggton/vogelpetdoctor/views/owners-subview.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.BorderPane?>
 
-
 <BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.flaggton.vogelpetdoctor.views.OwnersSubviewController">
-   <center>
+   <top>
       <Label text="Owners" BorderPane.alignment="CENTER" />
+   </top>
+   <center>
+      <ListView fx:id="listViewOwners" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
