--- a/src/main/resources/io/github/flaggton/vogelpetdoctor/views/pets-create-new-dialog.fxml
+++ b/src/main/resources/io/github/flaggton/vogelpetdoctor/views/pets-create-new-dialog.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -28,12 +29,12 @@
             <Label text="Animal Type:" GridPane.rowIndex="2" />
             <TextField fx:id="ownerIdTextField" GridPane.columnIndex="1" />
             <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="animalTypeTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button mnemonicParsing="false" onAction="#onCreateNewPetButtonClick" text="Create new pet" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </Button>
+            <ChoiceBox fx:id="animalTypeChoiceBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
