--- a/src/main/resources/io/github/flaggton/vogelpetdoctor/views/pets-edit-dialog.fxml
+++ b/src/main/resources/io/github/flaggton/vogelpetdoctor/views/pets-edit-dialog.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -25,11 +26,11 @@
          <children>
             <Label text="Owner ID:" />
             <Label text="Name:" GridPane.rowIndex="1" />
-            <Label text="Animal Type" GridPane.rowIndex="2" />
+            <Label text="Animal Type:" GridPane.rowIndex="2" />
             <TextField fx:id="ownerIdTextField" GridPane.columnIndex="1" />
             <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="animalTypeTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button mnemonicParsing="false" onAction="#onEditButtonClick" text="Edit pet" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ChoiceBox fx:id="animalTypeChoiceBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
